made correction to seminar report

--- a/column/03/index.html
+++ b/column/03/index.html
@@ -103,7 +103,7 @@
               <p class="date-t"></p>
             </div>
             <img class="img-center-top" src="20240911-photo/20240911-01.jpg" alt="img">
-            <p>グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。企業の人事部門は、どのようなアプローチで人材育成に取り組めばいいのでしょうか？日本経済新聞 人材・教育事業ユニットは、人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんをゲストに迎え、経営層／人事・研修担当者向けセミナー『グローバル人材育成をどう実践していくのか～プロが語るHR部門の課題と役割～』を開催しました。セミナー後半では、企業の人事部門にグローバル人材育成の施策提案を行なっている日本経済新聞の北村大輔さんにも加わってもらい、実践的なアプローチと本質的なグローバル人材育成における人事部門の果たすべき役割について、現状と課題を掘り下げて解説してもらいました。聞き手は、東レおよびソニーにて海外事業の新規市場開拓に従事し、現在は複数の企業の組織開発支援を行うトイトイ合同会社の代表を務める永島寛之さんです。</p>
+            <p class="starting">グローバル化したビジネス環境において日本企業が勝ち抜くための人材育成が大きな経営課題になっています。企業の人事部門は、どのようなアプローチで人材育成に取り組めばいいのでしょうか？日本経済新聞 人材・教育事業ユニットは、人材育成領域のプロフェッショナルでHRファーブラ代表取締役の山本紳也さんをゲストに迎え、経営層／人事・研修担当者向けセミナー『グローバル人材育成をどう実践していくのか～プロが語るHR部門の課題と役割～』を開催しました。セミナー後半では、企業の人事部門にグローバル人材育成の施策提案を行なっている日本経済新聞の北村大輔さんにも加わってもらい、実践的なアプローチと本質的なグローバル人材育成における人事部門の果たすべき役割について、現状と課題を掘り下げて解説してもらいました。聞き手は、東レおよびソニーにて海外事業の新規市場開拓に従事し、現在は複数の企業の組織開発支援を行うトイトイ合同会社の代表を務める永島寛之さんです。</p>
         </div>
         <div>
             <h3 class="profile">登壇者プロフィール</h3>
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="main-body">
             <h2>そもそもグローバル人材の定義とは？</h2>
             <p>グローバル人材育成の第一歩としてまず取り組むべきことは、「グローバル人材の定義」を明確にすることです。会社が描く未来像がそれぞれ違うように、グローバル人材の定義も会社によって異なります。定義を明確にした上で、経営層・人事部門・現場マネージャー・従業員が同じ理解をもって進むことが重要です。</p>
             <h3>グローバル人材の定義を決めずに進めない</h3>
@@ -210,12 +210,10 @@
             <p><span class="name">山本</span>日本は「阿吽の呼吸」が通じるハイコンテクストで、アメリカやドイツなどは言葉で説明しないと伝わらないローコンテクストと言われています。我々が努力で説明力をつけることはできますが、ローコンテクストの人がハイコンテクストに合わせてコミュニケーションをとることは非常に難しく、そう簡単にはできません。つまり、日本企業が本気でグローバル化を考えるならば、ローコンテクスト側に入って行く必要があるのです。その考え方をベースに持って時間やお金を投資していくことを、人事部門と現場が一緒になって考えていってほしいと思います。</p>
             <p>グローバル人材育成の課題においては、常に「何のためのグローバル化か？」という本質的な目的を見失わずに「何を？」「誰に？」「どうやって？」を設計していくことが重要です。これらを議論する場を人事部門が積極的に用意し、よりよい環境を整えていってください。</p>
         </div>
+        <div class="column-size">
         <section class="">
           <div class="column-report">
-            <ul class="column-title">
-            <li class="column-txt">【特別レポート】</li>
-            <li class="column-txt">英語研修を見直す</li>
-            <li class="column-txt">８つのチェックリスト</li>
+            <p class="column-title">【特別レポート】<br>英語研修を見直す<br>８つのチェックリスト</p>
             </ul>
             <img class="img-ad" src="pic/5472c48467e9d27b565819dd5631abd9.png" alt="VERSANT資料イメージ">
             <ul class="p-column-list">
@@ -228,10 +226,7 @@
           </div>
       
           <div class="column-report">
-            <ul class="column-title">
-              <li>【セミナーレポート】</li>
-              <li>日本からグローバルに活躍できる人材を育</li>
-              <li>てるために｜日本IBMの取り組み</li>
+            <p class="column-title">【セミナーレポート】<br>日本からグローバルに活躍できる人材を育<br>てるために｜日本IBMの取り組み</p>
             </ul>
               <img class="img-ad-ad" src="pic/report_bnr_02.png" alt="セミナーレポートイメージ">
             <ul class="p-column-list">
@@ -244,11 +239,12 @@
             </a>
           </div>
         </section>
+        </div>
         <div class="btn-box">
-          <a class="btn-place" href="../../index.html">
+          <a class="btn-place" href="../../index.html" class="btn-1">
             <span class="btn">TOPへ戻る</span>
           </a>
-          <a class="btn-place" href="../../casestudy/">
+          <a class="btn-place" href="../../casestudy/" class="btn-2">
             <span class="btn">導入事例/コラム一覧へ戻る</span>
           </a>
         </div>
