added new components to score

--- a/score/index.html
+++ b/score/index.html
@@ -112,7 +112,7 @@
     <main class="p-score">
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
-          <p class="l-page-head__name">スコアについて</p>
+          <p class="l-page-head__name">スコアでわかる英語力とは？</p>
           <h1 class="l-page-head__ttl">世界標準の詳細な<br class="sp_only">指標<br class="pc_only">GSE(Global<br class="sp_only"> Scale of English)<br>を解説</h1>
 
         </div>
@@ -122,22 +122,47 @@
         <div class="l-inner">
             <div class="p-score__data__points">
             <img src="../assets/img/score/score-num-1.png" alt="日本人平均40点">
-            <img src="../assets/img/score/score-num-2.png" alt="海外ビジネス初級43点">
+            <img src="../assets/img/score/score-num-2.png" alt="海外赴任目安43点">
             <img src="../assets/img/score/score-num-3.png" alt="グローバル企業採用基準59点">
             </div>
             <div class="p-score__data__scale">
             <img src="../assets/img/score/score-scale.png" alt="Global Scale of English | CEFR">
             </div>
-            <p>VERSANT のスコアは、CEFR（ヨーロッパ言語共通参照）に準拠したGSE (Global Scale of English)という指標で表示します。<br>
-            <br>
-            CEFRとは、言語能力を評価する国際的な指標です。その言語を使って「何がどの程度できるか(Can Do リスト)」を、入門レベルの＜A1からネイティブレベルのC2まで大きく７段階で分類します。2001年頃から、国際的な指標として普及し、世界中の英語教育機関で活用されています。<br>
-            <br>
-            GSE は、CEFRのレベルを10-90の1ポイントごとに細分化し、学習指標 (Can-do リスト ) と学習目標を詳細に設定します。GSEのスケールを使って学習者の英語力を正確に把握することで、学習者は自分に合った学習方法で能力を向上させることができます。また、組織内の目標スコアを設定したり、職種に応じて必要な英語スキルを数値化することで学習者のキャリア開発にも役立ちます。<br>
-            <br>
-            GSEに関する詳細は<a href="https://www.pearson.com/jp/ja/global-scale-of-english.html" class="text_link" target="_blank">こちら</a></p>
         </div>
       </section>
-      
+    <div class="score-rep-body">
+      <section class="score-rep" id="practice">
+        <h3 class="score-title"><em>スコアから分かる<br class="pcOnly">
+          <span>“仕事で使える</span><span>実践的な英語力“の</span>具体例</em></h3>
+        <ul class="score-column">
+          <li> <img src="../assets/img/score/man.png" alt="">
+            <h5><em class="man">76点</em><br>
+              交渉の場面</h5>
+            <p>複雑な交渉において、<br>
+              対立への解決策を提示できる</p>
+          </li>
+          <li> <img src="../assets/img/score/woman.png" alt="">
+            <h5><em class="woman">62点</em><br>
+              ビジネスのアイデアや<br>
+              提案において</h5>
+            <p>短く簡単なビジネス<br>
+              レポートが書ける</p>
+          </li>
+          <li> <img src="../assets/img/score/woman2.png" alt="">
+            <h5><em class="woman2">50点</em><br>
+              営業シーン</h5>
+            <p>製品やサービスの<br>
+              内容について、短く簡単な<br>
+              マーケティング文章が書ける</p>
+          </li>
+          <li> <img src="../assets/img/score/man2.png" alt="">
+            <h5><em class="man2">41点</em><br>
+              電話・メールでの交渉</h5>
+            <p>電話でアポイントメントを取れる</p>
+          </li>
+        </ul>
+        </section>
+    </div>  
       <section class="p-score__guide l-bg__light_gray">
         <div class="l-inner">
           <h2>VERSANTスコアは<br class="sp_only">国際基準に準拠</h2>
@@ -152,6 +177,12 @@
             </ul>
               <a href="../assets/img/score/gse-map.svg" class="expand-btn pc_only" target="enlarge">クリックで拡大</a>
               <a href="../assets/img/score/gse-map.svg" class="expand-btn_sp sp_only" target="enlarge">タップで拡大</a>
+          </div>
+          <h4 class="youtube_title" width="560">GSEを1分動画でわかりやすく解説</h4>
+          <div class="youtube_content">
+            <div class="youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/yX5C5-uhlwQ?si=_FEj8awNx1n97I1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
           </div>
           <div class="p-score__guide__cefr">
             <h3 class="is__cefr">CEFRスコアとの相関</h3>
