--- a/score/index.html
+++ b/score/index.html
@@ -181,7 +181,8 @@
           <h4 class="youtube_title" width="560">GSEを1分動画でわかりやすく解説</h4>
           <div class="youtube_content">
             <div class="youtube">
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/yX5C5-uhlwQ?si=_FEj8awNx1n97I1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="560" height="315" style="aspect-ratio: 16 / 9; width: 100% !important;"
+              src="https://www.youtube.com/embed/yX5C5-uhlwQ?si=_FEj8awNx1n97I1o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div>
           <div class="p-score__guide__cefr">
