title of score was altered

--- a/score/index.html
+++ b/score/index.html
@@ -102,7 +102,7 @@
           <li class="l-header__nav-item"><a href="../price/index.html" class="l-header__nav-link">価格</a></li>
           <li class="l-header__nav-item"><a href="../casestudy/index.html" class="l-header__nav-link">事例</a></li>
           <li class="l-header__nav-item"><a href="../faq/index.html" class="l-header__nav-link">FAQ</a></li>
-          <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">資料請求</a></li>
+          <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">正確に把握できる</a></li>
         </ul>
       </nav>
   </div>
@@ -113,7 +113,7 @@
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
           <p class="l-page-head__name">スコアでわかる英語力とは？</p>
-          <h1 class="l-page-head__ttl">世界標準の詳細な<br class="sp_only">指標<br class="pc_only">GSE(Global<br class="sp_only"> Scale of English)<br>を解説</h1>
+          <h1 class="l-page-head__ttl">｢社員が英語でできること｣を<br>正確に把握できる</h1>
 
         </div>
       </div>
