change ad column again

--- a/column/03/index.html
+++ b/column/03/index.html
@@ -228,7 +228,7 @@
             </div>
         
             <div class="column-report">
-              <p class="column-title-b">【セミナーレポート】<br>日本からグローバルに活躍できる人材を育<br>てるために｜日本IBMの取り組み</p>
+              <p class="column-title-b">【セミナーレポート】<br>日本からグローバルに活躍できる人材を育てるために｜日本IBMの取り組み</p>
               </ul>
                 <img class="img-ad-ad" src="pic/report_bnr_02.png" alt="セミナーレポートイメージ">
               <ul class="p-column-list">
