--- a/score/index.html
+++ b/score/index.html
@@ -102,7 +102,7 @@
           <li class="l-header__nav-item"><a href="../price/index.html" class="l-header__nav-link">価格</a></li>
           <li class="l-header__nav-item"><a href="../casestudy/index.html" class="l-header__nav-link">事例</a></li>
           <li class="l-header__nav-item"><a href="../faq/index.html" class="l-header__nav-link">FAQ</a></li>
-          <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">正確に把握できる</a></li>
+          <li class="l-header__nav-item"><a href="../library/index.html" class="l-header__nav-link">資料請求</a></li>
         </ul>
       </nav>
   </div>
@@ -112,12 +112,15 @@
     <main class="p-score">
       <div class="l-page-head l-bg__gray is__page-head-bg">
         <div class="l-inner">
-          <p class="l-page-head__name">スコアでわかる英語力とは？</p>
-          <h1 class="l-page-head__ttl">｢社員が英語でできること｣を<br>正確に把握できる</h1>
+          <h1 class="l-page-head__name">スコアでわかる英語力とは？</h1>
+          <p class="l-page-head__ttl">｢社員が英語でできること｣を<br>正確に把握できる</p>
 
         </div>
       </div>
-      
+      <div class="l-inner-a">
+        <h2>VERSANTのスコアとは</h2>
+        <p>VERSANTの総合スコアは10～90点で採点されます。GSE（Global Scale of English）※と相関があり、スコアごとに「英語でできること」を詳細に把握することができます。グローバル人材の採用や選抜、研修のゴール 設定や効果測定に役立ちます。</p>
+      </div>
       <section class="p-score__data">
         <div class="l-inner">
             <div class="p-score__data__points">
@@ -132,8 +135,7 @@
       </section>
     <div class="score-rep-body">
       <section class="score-rep" id="practice">
-        <h3 class="score-title"><em>スコアから分かる<br class="pcOnly">
-          <span>“仕事で使える</span><span>実践的な英語力“の</span>具体例</em></h3>
+        <h2>スコアから分かる<br>“仕事で使える実践的な英語力“の具体例</h2>
         <ul class="score-column">
           <li> <img src="../assets/img/score/man.png" alt="">
             <h5><em class="man">76点</em><br>
